feat: plants
