# doc/api.yaml
@@ -251,7 +251,7 @@ paths:
     get:
       tags:
         - Animals
-      operationId: getGspAnimals
+      operationId: getGspAnimalsStats
       security:
         - bearerAuth: [ ]
       parameters:
@@ -334,6 +334,7 @@ paths:
           type: string
         description: filter animals by green_space
     get:
+      operationId: getGspPlantsStats
       tags:
         - Plants
       security:
@@ -353,6 +354,8 @@ paths:
             'application/json':
               schema:
                 type: object
+                allOf:
+                  - $ref: "#/components/schemas/PagedResponse"
                 properties:
                   data:
                     type: array
@@ -369,6 +372,7 @@ paths:
         '500':
           $ref: '#/components/responses/500'
     put:
+      operationId: crupdateGspPlantsStats
       tags:
         - Plants
       security:
