# src/main/java/mg/vnnd/rtgiapi/rest/endpoint/controller/PlantController.java
@@ -1,12 +1,12 @@
 package mg.vnnd.rtgiapi.rest.endpoint.controller;
 
 import lombok.AllArgsConstructor;
-import mg.vnnd.rtgiapi.endpoint.rest.model.CrupdateGspAnimalsStatsRequest;
-import mg.vnnd.rtgiapi.endpoint.rest.model.GetGspAnimalsStats200Response;
+import mg.vnnd.rtgiapi.endpoint.rest.model.CrupdateGspPlantsStatsRequest;
+import mg.vnnd.rtgiapi.endpoint.rest.model.GetGspPlantsStats200Response;
 import mg.vnnd.rtgiapi.model.BoundedPageSize;
 import mg.vnnd.rtgiapi.model.PageFromOne;
-import mg.vnnd.rtgiapi.rest.endpoint.controller.mapper.AnimalMapper;
-import mg.vnnd.rtgiapi.rest.endpoint.service.AnimalService;
+import mg.vnnd.rtgiapi.rest.endpoint.controller.mapper.PlantMapper;
+import mg.vnnd.rtgiapi.rest.endpoint.service.PlantService;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
@@ -16,18 +16,18 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @AllArgsConstructor
-public class AnimalController {
-  private final AnimalService service;
-  private final AnimalMapper mapper;
+public class PlantController {
+  private final PlantService service;
+  private final PlantMapper mapper;
 
   @GetMapping("/green-spaces/{gsp_id}/animal-statistics")
-  public GetGspAnimalsStats200Response getGspAnimals(
+  public GetGspPlantsStats200Response getGspAnimals(
       @PathVariable("gsp_id") String gspId,
       @RequestParam(required = false, name = "is_endemic") Boolean isEndemic,
       @RequestParam(value = "page", required = false) PageFromOne page,
       @RequestParam(value = "page_size", required = false) BoundedPageSize pageSize) {
     var data = service.findAllBy(gspId, isEndemic, page, pageSize);
-    return new GetGspAnimalsStats200Response()
+    return new GetGspPlantsStats200Response()
         .hasPrevious(data.hasPrevious())
         .pageNumber(page.getValue())
         .pageSize(pageSize.getValue())
@@ -36,9 +36,9 @@ public class AnimalController {
   }
 
   @PutMapping("/green-spaces/{gsp_id}/animal-statistics")
-  public CrupdateGspAnimalsStatsRequest crupdateGspAnimalsStats(
-      @PathVariable("gsp_id") String gspId, @RequestBody CrupdateGspAnimalsStatsRequest body) {
+  public CrupdateGspPlantsStatsRequest crupdateGspAnimalsStats(
+      @PathVariable("gsp_id") String gspId, @RequestBody CrupdateGspPlantsStatsRequest body) {
     var data = service.saveAll(body.getData().stream().map(mapper::toDomain).toList());
-    return new CrupdateGspAnimalsStatsRequest().data(data.stream().map(mapper::toRest).toList());
+    return new CrupdateGspPlantsStatsRequest().data(data.stream().map(mapper::toRest).toList());
   }
 }
